更新老師教的 移除class 直接用變數進去

--- a/index copy.html
+++ b/index copy.html
@@ -13,6 +13,10 @@
             overflow: hidden;
         }
 
+        div {
+            user-select: none;
+        }
+
         #main {
             width: 100vw;
             height: 100vh;
@@ -185,7 +189,7 @@
                 <td>Highest:</td>
             </tr>
             <tr>
-                <td id="name">none</td>
+                <td id="name">無人</td>
             </tr>
             <tr>
                 <td>Time:</td>
@@ -210,41 +214,21 @@
     <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js'
         integrity='sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ=='
         crossorigin='anonymous'></script>
-    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="http://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script>
-        // -------------------------------------------------------基本局數設定
-        let round = 8
-        //***********************************************************************************
-        let start_time = Date.now()
-        const update = function () {
-            $('#round').text(`Round ${round}/10`)
-        }
-        update()
-        // 結束後動作
-        let times = 999;
-        const end = () => {
-            Swal.fire(`你的紀錄是${times}秒`)
-            $('#start').css({ display: 'block' })
-            $('#timer').css({ display: 'none' })
 
-            if (times < highestScore.score) {
-                const input = prompt('新紀錄，請輸入名稱')
-                highestScore.score = times;
-                highestScore.name = input;
-                $('#name').text(input);
-                $('#score').text(times);
-                localStorage.setItem('winner', JSON.stringify(highestScore))
-            }
-            round = 1
-        }
-        // 開始後動作
-        $('#start').click(function () {
-            $('.ok').removeClass('ok')
-            start_time = Date.now()
-            $('#start').css({ display: 'none' })
-            $('#timer').css({ display: 'block' })
-            round2()
-        })
+        // 初始設定
+        let round = 1
+        let updateTime = 0
+        // 耗費時間(初始設999,以免讀取意外)
+        let times = 0;
+        let start_time = 0
+        // 初始速度
+        let speed = 1500
+        // 箱子旋轉變數
+        let degree = 0
+        // 第十關 紀錄錯太多次會有變化(增加字體大小+顏色)
+        let tooManyTimes = -1
         // ---------------------------------------遊戲資料設定
         let highestScore = { name: '', score: 999 }
         let storage = localStorage.getItem('winner')
@@ -255,6 +239,66 @@
             $('#name').text(storage.name);
             $('#score').text(storage.score);
         }
+        // -------------------------------------------------------基本局數設定
+        const update = function () {
+            $('#round').text(`Round ${round}/10`)
+        }
+        update()
+        // 結束後動作
+        const end = () => {
+            clearInterval(updateTime)
+            clearInterval(waitTime)
+            times = (Date.now() - start_time) / 1000
+            $('#start').css({ display: 'block' })
+            $('#timer').css({ display: 'none' })
+            if (times < highestScore.score) {
+
+                const ending = async function () {
+                    const { value: userName } = await Swal.fire({
+                        title: "停一步海闊天空-恭喜過關",
+                        text: `你的紀錄是${times}秒`,
+                        input: 'text',
+                        showCancelButton: false
+                    });
+                    highestScore.score = times;
+                    highestScore.name = userName;
+                    $('#name').text(userName);
+                    $('#score').text(times);
+                    localStorage.setItem('winner', JSON.stringify(highestScore))
+                }
+                ending()
+            } else { Swal.fire('停一步海闊天空-恭喜過關') }
+        }
+        // 開始後動作
+        $('#start').click(function () {
+            updateTime = setInterval(function () {
+                times = (Math.floor((Date.now() - start_time) / 100) / 10).toFixed(1)
+                $('#timer').text(times + 's')
+            }, 100)
+            function initial(e) {
+                // 把重完可能漏改的變數再刷一次
+                // round = 1;
+                round = 1;
+                times = 0;
+                playing = 0
+                waitTime = 0
+                clickTimes = -1
+                wait = -1
+                speed = 1500
+                degree = 0
+                tooManyTimes = -1
+                // 清除第10關
+                $('.alert').css({ "font-size": "50px", color: 'black' })
+                $('.alert').text('click black box')
+            }
+            initial()
+            $('.ok').removeClass('ok')
+            start_time = Date.now()
+            $('#start').css({ display: 'none' })
+            $('#timer').css({ display: 'block' })
+            round1()
+        })
+
         // ---------------------------------------------------------------遊戲設定
         // 亂數生成器
         const ran = function (i) {
@@ -278,133 +322,102 @@
                 r9Count()
             }
             // 如果都壓完，隔一秒後下一關
-            if (($('.ok').length == 5 || clickTimes >= 10) && $('#start').css('display') == 'none') {
+            if (($('.ok').length == 5 || clickTimes >= 50) && $('#start').css('display') == 'none') {
                 // **************************************************************************************************
                 clearInterval(playing)
-                    $('.ok').removeClass('ok')
-                    round++
-                    switch (round) {
-                        case 2:
-                            round2()
-                            break;
-                        case 3:
-                            round3()
-                            break;
-                        case 4:
-                            round4()
-                            break;
-                        case 5:
-                            round5()
-                            break;
-                        case 6:
-                            round6()
-                            break;
-                        case 7:
-                            round7()
-                            break;
-                        case 8:
-                            round8()
-                            break;
-                        case 9:
-                            round9()
-                            break;
-                        case 10:
-                            //    消除第九關的clickTimes 以免上面自動執行
-                            clickTimes = -1
-                            round10()
-                            break;
-                        // 第10關亂點重回9關
-                        default:
-                            round = 9
-                            round9()
-                    }
-                    update()
+                $('.ok').removeClass('ok')
+                round++
+                switch (round) {
+                    case 2:
+                        round2()
+                        break;
+                    case 3:
+                        round3()
+                        break;
+                    case 4:
+                        round4()
+                        break;
+                    case 5:
+                        round5()
+                        break;
+                    case 6:
+                        round6()
+                        break;
+                    case 7:
+                        round7()
+                        break;
+                    case 8:
+                        round8()
+                        break;
+                    case 9:
+                        round9()
+                        break;
+                    case 10:
+                        //    消除第九關的clickTimes 以免上面自動執行
+                        clickTimes = -1
+                        round10()
+                        break;
+                    // 第10關亂點重回9關
+                    default:
+                        round = 9
+                        round9()
+                }
+                update()
             }
         })
         const r9Count = function () {
             clickTimes++
-            $('.alert').text(`click black ${50 - clickTimes} times`)
+            $('.alert').text(`click only ${50 - clickTimes} times`)
         }
         // -------第一關箱子移動
         // 初始動畫
         let setTransition = function () {
             $('#box').css({ transition: `all ${speed / 1000}s linear` })
         }
-        // 初始速度
-        let speed = 1500
-        //  -----箱子移動
-        // 建立一個object去取function(因為不能改function)
-        let css = {
-            action:
-                function () {
-                    return { left: `calc(${ran(100)}% - 15%)`, top: `calc(${ran(100)}% - 10%)` }
-                }
-        }
 
         // ***************************************************
-        // 為了可共用move() 
-        // 1.把Css { left: `calc(${ran(100)}% - 15%)`, top: `calc(${ran(100)}% - 10%)` } 用變數拆出來誕生上方的 css
-        // 2.要變換move() 裡面的function ，只想到用物件來變換(因為let 不能改) 誕生css.action()
-        // 3.發現 move()用變數宣告 會無法改值，所以改用object 來重新宣告重讀css.action()
-        // 4.但目前playing 似乎就無法被clearInterval...
-        // ***************************************************
-        class actionC {
-            move() {
-                $('#box').css(css.action())
-                playing = setInterval(function () {
-                    setTransition()
-                    times = (Date.now() - start_time) / 1000
-                    $('#timer').text(times)
-                    $('#box').css(css.action())
-                }, speed)
-            }
-        }
-
-        let boxMove = function () {
-            $('#box').css(css.action())
+        // 每關固定的變化
+        const move = (act) => {
+            $('#box').css(act())
             playing = setInterval(function () {
                 setTransition()
-                $('#box').css(css.action())
+                $('#box').css(act())
             }, speed)
         }
 
         // -------第1關箱子移動
         const round1 = function () {
-            var d = new actionC();
-            d.move()
+            //  -----箱子移動
+            let css = function () {
+                return { left: `calc(${ran(100)}% - 15%)`, top: `calc(${ran(100)}% - 10%)` }
+            }
+            move(css)
         }
         // -------第2關箱子高速移動
         const round2 = function () {
             speed = 1000
-            var d = new actionC();
-            d.move()
+            let css = function () {
+                return { left: `calc(${ran(100)}% - 15%)`, top: `calc(${ran(100)}% - 10%)` }
+            }
+            move(css)
         }
 
         // -------第3關箱子旋轉+移動
-
+        //  上個是move(cssr1)，我一定要變成是重設個function:cssr2 進去 move()?
         const round3 = function () {
-            let degree = 0
-            css = {
-                action:
-                    function () {
-                        return { left: `calc(${ran(100)}% - 15%)`, top: `calc(${ran(100)}% - 10%)`, transform: `rotate(${degree += 90}deg)` }
-                    }
+            let css = function () {
+                return { left: `calc(${ran(100)}% - 15%)`, top: `calc(${ran(100)}% - 10%)`, transform: `rotate(${degree += 90}deg)` }
             }
-            var d = new actionC();
-            d.move()
+            move(css)
         }
         // -------第4關箱子翻轉+移動
 
         const round4 = function () {
             degree = 0
-            css = {
-                action:
-                    function () {
-                        return { left: `calc(${ran(100)}% - 15%)`, top: `calc(${ran(100)}% - 10%)`, transform: `rotateY(${degree += 90}deg)` }
-                    }
+            let css = function () {
+                return { left: `calc(${ran(100)}% - 15%)`, top: `calc(${ran(100)}% - 10%)`, transform: `rotateY(${degree += 90}deg)` }
             }
-            var d = new actionC();
-            d.move()
+            move(css)
         }
         // -------第5關箱子紅色點了要重點黑色
         const round5 = function () {
@@ -416,44 +429,42 @@
             $('.back').click(function () {
                 $('.b').eq($(this).attr('data-num') - 1).removeClass('ok')
             })
-            css = {
-                action:
-                    function () {
-                        return { left: `calc(${ran(100)}% - 15%)`, top: `calc(${ran(100)}% - 10%)`, transform: `rotateY(${degree += 90}deg)` }
-                    }
+            let css = function () {
+                return { left: `calc(${ran(100)}% - 15%)`, top: `calc(${ran(100)}% - 10%)`, transform: `rotateY(${degree += 90}deg)` }
             }
-            var d = new actionC();
-            d.move()
+            move(css)
         }
         // -------第6關箱子紅色點了要全重點
         const round6 = function () {
             $('.back').remove();
+            $('.back').off();
             $('.alert').text('Never click red')
             $('#box').css({ background: 'red', transform: `rotateY(0deg)` })
             $('#box').click(function () {
                 $('.b').removeClass('ok')
             })
-            css = {
-                action:
-                    function () {
-                        return { left: `calc(${ran(100)}% - 15%)`, top: `calc(${ran(100)}% - 10%)` }
-                    }
+            let css = function () {
+                return { left: `calc(${ran(100)}% - 15%)`, top: `calc(${ran(100)}% - 10%)` }
             }
-            var d = new actionC();
-            d.move()
+            move(css)
         }
-        // -------第7關不能碰到箱子
+        // -------第7關不能離開箱子
         const round7 = function () {
             speed = 2000
             $('.alert').text('Never hover Yellow!')
             $('#box').css({ background: 'white' })
-            $('#main').css({ background: 'rgba(0,255,0,0.7)' })
+            $('#main').css({ background: ' yellow' })
+            $('#box').off('click');
             $('#box').mouseover(function () {
                 event.stopPropagation()
             })
             $('#main').mouseover(function () {
                 $('.b').removeClass('ok')
             })
+            let css = function () {
+                return { left: `calc(${ran(100)}% - 15%)`, top: `calc(${ran(100)}% - 10%)` }
+            }
+            move(css)
             css = {
                 action:
                     function () {
@@ -463,52 +474,47 @@
             var d = new actionC();
             d.move()
         }
-        // -------第8關紅色點了要全重點+不能碰到箱子
+        // -------第8關紅色點了要全重點+不能離開箱子
         const round8 = function () {
             speed = 2000
             $('.back').remove();
             $('#box').css({ background: 'red' })
-            $('#main').css({ background: 'rgba(0,255,0,0.7)' })
+            $('#main').css({ background: 'yellow' })
             $('#box').click(function () {
                 $('.b').removeClass('ok')
             })
             $('.alert').text('Never hover Yellow + Never click red!')
-            $('#box').mouseover(function () {
-                event.stopPropagation()
-            })
-            $('#main').mouseover(function () {
-                $('.b').removeClass('ok')
-            })
-            css = {
-                action:
-                    function () {
-                        return { left: `calc(${ran(100)}% - 15%)`, top: `calc(${ran(100)}% - 10%)` }
-                    }
+            let css = function () {
+                return { left: `calc(${ran(100)}% - 15%)`, top: `calc(${ran(100)}% - 10%)` }
             }
-            var d = new actionC();
-            d.move()
+            move(css)
         }
         // -------第9關點50下
         const round9 = function () {
-            speed = 300
+            $('#box').off('click');
+            speed = 500
+            $('#box').css({ background: 'white' })
+            $('.b').css({ width: '100%', height: '100%' })
             $('#main').css({ background: 'white' })
-            $('.alert').text('click black 50 times')
-            css = {
-                action:
-                    function () {
-                        return { left: `20%`, top: `20%` }
-                        // return { left: `calc(${ran(100)}% - 15%)`, top: `20%` }
-                    }
+            $('.alert').text('click only 50 times')
+            $('#main').mouseover(function () {
+                $('.b').removeClass('ok')
+            })
+            let css = function () {
+                return { left: `calc(${ran(100)}% - 15%)`, top: `20%` }
             }
-            var d = new actionC();
-            d.move()
+            move(css)
             clearInterval(waitTime);
             clickTimes = 0
         }
         // -------第10關-不要點
-        // 點太多次，增加字體大小+顏色
-        let tooManyTimes = -1
         const round10 = function () {
+            // 清除第8關的
+            $('#main').off('mouseover')
+
+            $('#box').css({ left: `20%`, top: `20%` })
+            $('.b').css({ width: 'var(--size)', height: 'var(--size)' })
+            $('.alert').text('Do not click "black"')
             tooManyTimes++
             wait = 0
             waitTime = setInterval(function () {
@@ -521,17 +527,16 @@
             })
             switch (tooManyTimes) {
                 case 0:
-                    $('.alert').text('Do not click "black"')
                     break;
                 case 1:
                     $('.alert').css({ "font-size": "70px" })
                     break;
                 case 2:
-                    $('.alert').css({ "font-size": "90px", color: 'red' })
-                    $('.alert').text('Do not click "black"!!')
+                    $('.alert').css({ "font-size": "100px", color: 'red' })
                     break;
                 default:
                     $('.alert').text('Go endless Hell!')
+                    $('.alert').css({ "font-size": "100px" })
             }
         }
     </script>
